examples/test/testpolicy15079.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15079
  namespace: namespace454
spec:
  podSelector:
    matchLabels:
      key4: value15
      key26: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value14
      podSelector:
        matchLabels:
          key25: value5
          key27: value38
          key37: value11
